Fix: theoretical configwidget leak in services

Fix memory leak.
Cleanup additional layouts and widgets
Remove KDE logging. We have our own logging

BUG: 301352
FIXED-IN: 2.8